# python-project-initializer

./: .gitignore  LICENSE  README.md  ppi  ppi.sh  pyproject.toml
data/scripts/: docker-build.sh  docker-clean.sh  docker-push.sh
data/src/: setup.py
scripts/: .gitignore  _conf.sh  docker-run.sh
src/: ppi.py  terminal.py  utils.py
