[tool.poetry]
name = "python-project-initializer"
version = "0.1.0"
description = ""
authors = ["Gabriele Corni <gabriele.corni@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
